--- a/Discover-Bank-Phone/res/layout/customer_service.xml
+++ b/Discover-Bank-Phone/res/layout/customer_service.xml
@@ -29,7 +29,7 @@
 
             <TextView
                 android:id="@+id/card_phone_title_label"
-                style="@style/need_help_text"
+                style="@style/common_need_help_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/phone_title_label"
@@ -46,7 +46,7 @@
 
             <TextView
                 android:id="@+id/bank_phone_title_label"
-                style="@style/need_help_text"
+                style="@style/common_need_help_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/card_phone_numbers_list"
@@ -74,7 +74,7 @@
 
             <TextView
                 android:id="@+id/card_mail_title_label"
-                style="@style/need_help_text"
+                style="@style/common_need_help_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/mail_title_label"
@@ -91,7 +91,7 @@
 
             <TextView
                 android:id="@+id/bank_mail_title_label"
-                style="@style/need_help_text"
+                style="@style/common_need_help_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/card_mail_address_list"
