--- a/Discover-Bank-Phone/res/layout/payee_detail.xml
+++ b/Discover-Bank-Phone/res/layout/payee_detail.xml
@@ -37,6 +37,7 @@
             android:layout_below="@+id/edit_payee_button" 
             android:layout_centerHorizontal="true"
             android:background="@null"
+            android:visibility="invisible"
             android:text="@string/bank_payee_action_delete" >
         </Button>
         
