--- a/Discover-Commons/res/layout/new_general_need_help_footer.xml
+++ b/Discover-Commons/res/layout/new_general_need_help_footer.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:text="@string/need_help_text"
  			android:gravity="center_horizontal"
-			style="@style/need_help_text" />
+			style="@style/common_need_help_text" />
 
 	    <TextView
 	        android:id="@+id/help_number_label"
