--- a/Discover-Commons/res/drawable/toggle_mid_on.xml
+++ b/Discover-Commons/res/drawable/toggle_mid_on.xml
@@ -5,13 +5,15 @@
     <item>
         <shape android:shape="rectangle" >
             <solid android:color="@color/field_copy" />
+            <stroke  android:width="1dp" android:color="@color/field_copy"/>
         </shape>
     </item>
 
     <!-- Top color -->
     <item
         android:bottom="1dp"
-        android:top="1dp">
+        android:top="1dp"
+        android:left="1dp">
         <shape android:shape="rectangle" >
             <gradient
                 android:angle="270"
