--- a/Discover-Commons/res/drawable/toggle_single_off.xml
+++ b/Discover-Commons/res/drawable/toggle_single_off.xml
@@ -7,8 +7,7 @@
             <solid android:color="@color/field_copy" />
 
             <corners
-                android:bottomLeftRadius="3dp"
-                android:topLeftRadius="3dp" />
+				android:radius="3dp" />
         </shape>
     </item>
 
@@ -16,6 +15,7 @@
     <item
         android:bottom="1dp"
         android:left="1dp"
+        android:right="1dp"
         android:top="1dp">
         <shape android:shape="rectangle" >
             <gradient
