--- a/Discover-Commons/res/drawable/toggle_single_on.xml
+++ b/Discover-Commons/res/drawable/toggle_single_on.xml
@@ -7,8 +7,7 @@
             <solid android:color="@color/field_copy" />
 
             <corners
-                android:bottomLeftRadius="3dp"
-                android:topLeftRadius="3dp" />
+                android:radius="3dp" />
         </shape>
     </item>
 
@@ -16,12 +15,13 @@
     <item
         android:bottom="1dp"
         android:left="1dp"
+        android:right="1dp"
         android:top="1dp">
         <shape android:shape="rectangle" >
             <gradient
-                android:angle="90"
-                android:endColor="#ffffff"
-                android:startColor="#d6d6d4" />
+                android:angle="270"
+                android:endColor="@color/field_copy"
+                android:startColor="@color/body_copy" />
 
             <corners
                 android:bottomLeftRadius="2dp"
