--- a/Discover-Card-Phone/res/layout/strongauth_page.xml
+++ b/Discover-Card-Phone/res/layout/strongauth_page.xml
@@ -28,7 +28,7 @@
             <TextView
                 android:id="@+id/account_security_label"
                 style="@style/title_copy"
-                android:layout_width="250dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_security_server_error"
                 android:layout_marginTop="4dp"
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/account_security_label"
-                android:layout_alignRight="@+id/account_security_label"
+                android:layout_alignRight="@+id/account_security_question_answer_field"
                 android:layout_below="@+id/account_security_label"
                 android:paddingTop="@dimen/form_headname_margin_from_top"
                 android:text="@string/account_security_info_text" />
@@ -60,7 +60,7 @@
                 android:layout_height="@dimen/input_field_height"
                 android:layout_below="@+id/account_security_question_placeholder_label"
                 android:layout_marginTop="@dimen/top_margin_betwwn_components"
-                android:hint="@string/empty"
+                android:hint="Your Answer"
                 android:imeOptions="actionDone"
                 android:inputType="textNoSuggestions"
                 android:textCursorDrawable="@null" />
@@ -84,11 +84,66 @@
                 android:layout_marginTop="@dimen/top_margin_question"
                 android:text="@string/account_security_remember_device_text" />
 
+            <RelativeLayout
+                android:id="@+id/account_security_whats_this_relative_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/account_security_remember_device_label"
+                android:onClick="expandHelpMenu" >
+
+                <View
+                    android:id="@+id/account_security_separator_line_one"
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@color/field_stroke" />
+
+                <TextView
+                    android:id="@+id/account_security_whats_this_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/account_security_separator_line_one"
+                    android:text="@string/account_security_whats_this_text"
+                    android:layout_marginLeft="15dp"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textStyle="bold"
+                    android:textColor="@color/blue" />
+
+                <TextView
+                    android:id="@+id/account_security_plus_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@id/account_security_whats_this_label"
+                    android:layout_alignParentLeft="true"
+                    android:text="@string/account_security_plus_text"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@color/blue"
+                    android:textStyle="bold" />
+
+                <View
+                    android:id="@+id/account_security_separator_line_two"
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/account_security_whats_this_detail_label"
+                    android:layout_marginTop="4dp"
+                    android:background="@color/field_stroke" />
+
+                <TextView
+                    android:id="@+id/account_security_whats_this_detail_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/account_security_whats_this_label"
+                    android:maxLines="@integer/ZERO"
+                    android:text="@string/account_security_whats_this_detail_text"
+                    android:textColor="@color/black" />
+            </RelativeLayout>
+
             <RadioGroup
                 android:id="@+id/account_security_choice_radio_group"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/account_security_remember_device_label"
+                android:layout_below="@+id/account_security_whats_this_relative_layout"
                 android:layout_marginTop="@dimen/top_margin_betwwn_components"
                 android:background="@drawable/rounded_table_corners_no_padding"
                 android:divider="@drawable/modal_divider_line"
@@ -97,7 +152,7 @@
                 <RadioButton
                     android:id="@+id/account_security_choice_one_radio"
                     style="@style/strongauth_ans_selection"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:button="@null"
                     android:checked="true"
@@ -111,28 +166,11 @@
                     android:layout_width="fill_parent"
                     android:layout_height="4dp"
                     android:background="@drawable/row_shadow" />
-                <!--
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/home_list_item" />
-
-            <RelativeLayout
-                android:id="@+id/account_security_whats_this_relative_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                >
 
                 <View
-                    android:id="@+id/account_security_separator_line_one"
                     android:layout_width="fill_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginTop="8dp"
-                    android:divider="@drawable/row_shadow"/>
-            </RelativeLayout>
-
-                -->
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/home_list_item" />
 
                 <RadioButton
                     android:id="@+id/account_security_choice_two_radio"
@@ -157,48 +195,9 @@
                 android:layout_marginTop="@dimen/orange_button_margin_top"
                 android:onClick="submitSecurityInfo"
                 android:text="@string/continue_text" />
-
-            <!--
-             <TextView
-            android:id="@+id/provide_feedback_button"
-            style="@style/blue_hyperlink_small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/account_security_continue_button"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/orange_button_margin_top"
-            android:layout_marginTop="@dimen/orange_button_margin_top"
-            android:text="@string/feedback_text" />
-
-            -->
-
-
-            <!--
-             <com.discover.mobile.common.help.HelpWidget
-            android:id="@+id/help"
-            android:layout_width="wrap_content"
-            android:layout_height="400dp"
-            android:layout_above="@+id/account_security_remember_device_label"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="10dp" />
-
-            -->
-
-
-            <!--
-             <com.discover.mobile.common.help.HelpWidget
-            android:id="@+id/help"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp" />
-
-            -->
         </RelativeLayout>
 
-        <!-- <com.discover.mobile.common.help.HelpWidget
-            android:id="@+id/help"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp" /> -->
+   
     </RelativeLayout>
 
 </ScrollView>
