ID: US8410 - Android: Update ATM pins per Card's request ID: US8409 - Android: Update login screen to have button text, "Log In" ID: DE5153 - Add Unmanaged Payees - State Field Should Bring Back and Error ID: DE5150 - Android: Provide Feedback - keypad entirely cover the entry field ID: DE5094 - Account Summary - bottom line in a cell not getting drawn
Tested:
- Verified Pin Images are updated
- Verified lines are drawn at the bottom of every screen that use to use home_list_item drawable
- Verified Add Unmanaged payee does not block the user from adding a payee if they have not selected a state
- Verified button on screen for Login screen is the new string

--- a/Discover-Bank-Phone/res/layout/bank_under_development.xml
+++ b/Discover-Bank-Phone/res/layout/bank_under_development.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
-     android:background="@drawable/home_list_item"
+     android:background="@drawable/common_home_list_item"
      android:paddingLeft="@dimen/forms_inner_padding"
      android:paddingRight="@dimen/forms_inner_padding"
      android:paddingBottom="@dimen/table_inner_padding"  >
