--- a/Discover-Commons/res/values/strings_login.xml
+++ b/Discover-Commons/res/values/strings_login.xml
@@ -28,7 +28,7 @@
         Go to:
     </string>
     <string name="login_button_text">
-        Login
+        Log In
     </string>
     <string name="hide">
         Hide
