--- a/Discover-Bank-Phone/res/layout/bank_strongauth_page.xml
+++ b/Discover-Bank-Phone/res/layout/bank_strongauth_page.xml
@@ -155,7 +155,7 @@
             <View
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/home_list_item" />
+                android:background="@drawable/common_home_list_item" />
 
             <RadioButton
                 android:id="@+id/account_security_choice_two_radio"
