--- a/Discover-Bank-Phone/res/layout/simple_choose_item.xml
+++ b/Discover-Bank-Phone/res/layout/simple_choose_item.xml
@@ -7,7 +7,7 @@
     android:paddingBottom="@dimen/table_inner_padding"
     android:paddingRight="@dimen/forms_inner_padding"
     android:paddingLeft="@dimen/forms_inner_padding"
-	android:background="@drawable/home_list_item">
+	android:background="@drawable/common_home_list_item">
     
     <TextView 
         android:id="@+id/text"
