--- a/Discover-Commons/res/layout/navigation_menu_sub_section_item.xml
+++ b/Discover-Commons/res/layout/navigation_menu_sub_section_item.xml
@@ -22,9 +22,10 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/nav_section_height"
             android:layout_centerVertical="true"
-            android:paddingLeft="@dimen/nav_image_padding"
             android:layout_toRightOf="@+id/title"
-            android:src="@drawable/external_link_icon" />
+            android:paddingLeft="@dimen/nav_image_padding"
+            android:src="@drawable/external_link_icon" 
+            />
 
         <TextView
             android:id="@+id/push_countTV"
