US8186 - Dynamic Greeting. TA17037 - Time Change Greeting Support. Updates the greeting on the account summary page based on the time of day. Added a broadcast receiver that receives time tick events from the OS. So every minute, a check is done to see if the time has changed to a time when the clock should change. If so, the greeting is updated on a thread that gets the new greeting based on the time of day and updates the salutation text label. TA17038 - Update layout to support greeting. Layout has been updated and tested, however there is currently a character limit issue that will be resolved in the next commit. It needs to be increased form 20 to something more.

--- a/Discover-Bank-Phone/res/values/strings_bank_account.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_account.xml
@@ -7,7 +7,13 @@
     <string name="bank_ira_account">Retirement Plans</string>
     <string name="bank_loan_account">Personal Loans</string>
     <string name="bank_unknown_account">Other Accounts</string>
-
+    
+    <!-- Greeting Strings -->
+    <string name="greeting_prefix">Good %s,</string>
+    <string name="greeting_morning_suffix">morning</string>
+	<string name="greeting_afternoon_suffix">afternoon</string>
+	<string name="greeting_evening_suffix">evening</string>
+	
     <!-- Account Activity Strings -->
     <string name="activity_screen_title">Account Activity</string>
     <string name="activity_title">Discover Online Checking</string>
