--- a/Discover-Bank-Phone/res/layout/schedule_payment.xml
+++ b/Discover-Bank-Phone/res/layout/schedule_payment.xml
@@ -43,7 +43,8 @@
 	            android:paddingRight="@dimen/forms_inner_padding"
 	            android:text="@string/schedule_pay_duplicate_payment"
 	            android:textColor="@color/error_indicator"
-	            android:visibility="gone" />
+                android:layout_marginTop="15dp"
+                android:visibility="gone" />
 	
 	        <LinearLayout
 	            android:id="@+id/sched_pay_list"
