--- a/Discover-Card-Phone/res/values/error_code_mapping.xml
+++ b/Discover-Card-Phone/res/values/error_code_mapping.xml
@@ -13,14 +13,14 @@
     <string name="E_4031106">Your Discover Card Account Number has been changed. In order to	access your account through the mobile channel, you must first log in to the Account Center on www.discover.com. For more information, please contact Customer Service at 1-877-742-7822</string>
     <string name="E_4031401_NOTENROLLED">Help us keep your account safe by visiting discover.com on your primary computer to establish your set of security questions.</string>
     <string name="E_4031402">For security purposes, your online account has been locked.Please call Discover Customer Service at	1-888-251-8003 for information about accessing your account online.</string>
-    <string name="E_4031402_LOCKOUT">We know you\'re excited to login to app,but you\'ve tried to log in with the wrong user name or password too many times. Contact us by phone or use our enhanced account security to regain access to your account.</string>
+    <string name="E_4031402_LOCKOUT">We know you\'re excited to get into the app, but you\'ve tried to log in with the wrong username or password too many times."&lt;br&#47;&gt;""&lt;br&#47;&gt;Please contact Customer Service at 1-877-742-7822 for assistance.</string>
     <string name="E_4031401_DENY">LOST CARD.</string>
     <string name="E_4031401_UNLOCKED">Help us keep your account safe by visiting discover.com on your primary PC to establish your set of security questions.</string>
     <string name="E_4031401_UNVERIFIED">Help us keep your account safe by visiting discover.com on your primary PC to establish your set of security questions.</string>
     <string name="E_4031401_LOCKOUT">For security purposes, your online account has been locked.Please call Discover Customer Service at 1-888-251-8003 for information about accessing your account online.</string>
     <string name="E_0">We\'re sorry.Some of our web site features are unavailable at this time. We sincerely apologize for this temporary inconvenience and are working to resolve the issue.</string>
     <string name="E_4031102">Due to special conditions related to your account, we could not complete your request. Please contact Customer Service at 1-800-347-2683.</string>
-    <string name="E_4031102_SSO_DELINK">Due to special conditions related to your credit card account, we cannot provide you with access to your account information at this time.To recover your User ID, you will need to re-register for online account access at DiscoverBank.com.</string>
+    <string name="E_4031102_SSO_DELINK">Due to special conditions related to your credit card account, we can\'t provide you with access to your account information at this time."&lt;br&#47;&gt;""&lt;br&#47;&gt;To recover your User ID, you will need to re-register for online account access at DiscoverBank.com.</string>
     <string name="E_4031102_SSO_DELINK_BUTTON">true.</string>
     <string name="E_4031102_SSO">Due to special conditions related to your credit card account, we can\'t provide you with access to your account information at this time.Because of increased security measures, you will need to log into Discover Bank in order to access your online account.</string>
     <string name="E_4031102_SSN_NOT_MATCH">Due to special conditions related to your credit card account, we can\'t provide you with access to your account information at this time.Because of increased security measures, you will need to log into &lt;a href="http://www.discover.com">Discover Bank&lt;/a> in order to access your online account.</string>
@@ -169,7 +169,8 @@
     <string name="E_1228">Make a Payment:We are unable to process your online payment today	because it is past the 5:00pm Eastern Time cut off and you have	no available payment dates. For assistance call 1-877-742-7822.</string>
     <string name="E_1229">Make a Payment:We’re unable to process your online payment because	it is past the 5:00pm Eastern Time cutoff time and you have no available payment dates for the selected bank account. You can make a payment by selecting a different bank account. For assistance call 1-877-742-7822.</string>
     <string name="E_1230">Make a Payment: You have missed the Eastern Time cut off for submitting a payment that will post today. Your next	available payment posting date is !~nextAvailableDate~!. If you would like to submit your payment of $!~payAmount~! using this date please Submitbelow.</string>
-    <string name="E_1231">Your bank account is problematic, provide valid bank short name.</string>
+    <string name="E_1231">Your bank account is problematic, provide valid bank short name.
+</string>
     <string name="E_1232">Make a PaymentSome of our website features are unavailable at this time resulting in limited access to functionality and can process payments for the current day only. If you would like to schedule a payment for a future date, please try again later. We	thank you for your patience.</string>
     <string name="E_1233">Make a PaymentSome of our website features are unavailable at this	time resulting in limited access to functionality.We can however,process payments for the current day only. If you would like to schedule a payment for a future date,please try again later. We thank you for your patience.</string>
     <string name="E_1234">Hashed account number required. Please enter a valid hashed account number.</string>
@@ -229,9 +230,9 @@
 
     <string name="E_T_5031108">Cashback Bonus is Currently Unavailable</string>
     <string name="E_T_1401_LOCKOUT">Secure Credit Card Login</string>
-    <string name="E_T_4031102_SSO_DELINK">We\'re Sorry.</string>
-    <string name="E_T_4031102_SSO">We\'re Sorry.</string>
-    <string name="E_T_4031401_DENY">We\'re Sorry.</string>
+    <string name="E_T_4031102_SSO_DELINK">We\'re Sorry</string>
+    <string name="E_T_4031102_SSO">We\'re Sorry</string>
+    <string name="E_T_4031401_DENY">We\'re Sorry</string>
     <string name="E_T_4031106">We\'re Sorry</string>
     <string name="E_T_4031101"> You\'ve Been Locked Out</string>
     <string name="E_T_503">Oops!</string>
@@ -258,7 +259,7 @@
     <string name="E_T_4031102"> We\'re Sorry</string>
     <string name="E_T_4031105">Card Number Error</string>
     <string name="E_T_4031402">Enhanced Account Security</string>
-    <string name="E_T_4031402_LOCKOUT">You\'ve been locked out</string>
+    <string name="E_T_4031402_LOCKOUT">You\'ve Been Locked Out</string>
     <string name="E_T_4031401_UNLOCKED">Enhanced Account Security</string>
     <string name="E_T_4031401_NOTENROLLED">Enhanced Account Security</string>
     <string name="E_T_4031401_UNVERIFIED">Enhanced Account Security</string>
@@ -296,7 +297,7 @@
     <string name="E_T_4031905">We\'re Sorry</string>
     <string name="E_T_4001907">Your Request Could Not Be Completed</string>
     <string name="E_T_5001908">Your Request Could Not Be Completed</string>
-    <string name="E_T_4001910">Secure Credit Card Log In</string>
+    <string name="E_T_4001910">You\'ve Been Locked Out</string>
     <string name="E_T_4001911">We\'re Sorry</string>
     <string name="E_T_4001912">Your Request Could Not Be Completed</string>
     <string name="E_T_4001913">We\'re Sorry</string>
@@ -319,7 +320,7 @@
     <string name="E_4001907">There was a problem authenticating your registration information.</string>
     <string name="E_5001908">The information you entered was not valid.If you feel that you have received this message in error return to the Forgot Your Password page , and enter your information again.</string>
     <string name="E_5001909">Problem retrieving account information</string>
-    <string name="E_4001910">You Have Exceeded the Maximum Number of Unsuccessful Attempts. Please contact Customer Service at 1-877-742-7822 for assistance.</string>
+    <string name="E_4001910">We know you\'re excited to get into the app, but you\'ve tried to log in with the wrong username or password too many times."&lt;br&#47;&gt;""&lt;br&#47;&gt;Please contact Customer Service at 1-877-742-7822 for assistance.</string>
     <string name="E_4001911">Due to special conditions related to your account, we could not complete your request. Please contact Customer Service at 1-800-347-2683.</string>
     <string name="E_4001912">Due to special conditions related to your account, we cannot provide you with access to discover.com Mobile at this time. 
 	     Please contact customer service at 1-877-742-7822 for more information or assistance.</string>
@@ -332,7 +333,7 @@
     <string name="E_4001919">User ID and password must not be the same.</string>
     <string name="E_4001920">User ID must not look like your Social Security number. Please choose another one.</string>
     <string name="E_4001921">User ID is already in use. Please choose another one.</string>
-    <string name="E_4031922">Your Discover Card Account Number has changed. In order to access your account through the mobile channel, you must first log in to the Account Center at www.discover.com. For more information, please contact Customer Service at 1-877-742-7822.</string>
+    <string name="E_4031922">Your Discover Card Account Number has been changed. In order to	access your account through the mobile channel, you must first log in to the Account Center on www.discover.com. For more information, please contact Customer Service at 1-877-742-7822</string>
     <string name="E_4001923">The User ID is empty. Please enter a User ID.</string>
     <string name="E_4001924">The User ID is invalid. Please enter a valid User ID.</string>
     <string name="E_4001925">The password is empty. Please enter a password.</string>
@@ -346,6 +347,7 @@
     <!-- 2 for hide both -->
     <!-- 3 for show both -->
     <!-- 4 for show both feedback link and  need help footer and ok button navigate to logout activity -->
+    <string name="E_H_4001910">0</string>
     <string name="E_H_4031101">0</string>
     <string name="E_H_4031402">0</string>
     <string name="E_H_4031401_LOCKOUT">0</string>
