--- a/Discover-Launch/assets/www/card/css/edo-R13.css
+++ b/Discover-Launch/assets/www/card/css/edo-R13.css
@@ -659,19 +659,15 @@ background:none;font-size:14px;color:#50555a}
 	margin-top: 10px;
 	width:33%;	
 }
-#edoHistory-pg .wraper .historyList	.listLi .ui-block-b {
-	display: inline-block;
-	width:36%;
-}
+
 #edoHistory-pg .wraper .historyList	.listLi .ui-block-c {
 	display: inline-block;
-	width:30%;
-	float:right;
+	width:34%;
 }
 
 
 #edoHistory-pg .wraper .historyList	.listLi .ui-block-c span {
-	/*margin-left: 36%;*/
+	margin-left: 36%;
 	color: #777e81;
 	font-size: 12px;
 }
