DE5452 - Navigation Root Activity background now set so that we avoid a black screen on orientation change.

--- a/Discover-Bank-Phone/res/layout/bank_content_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_content_view.xml
@@ -12,6 +12,7 @@
         android:id="@+id/navigation_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/status_bar"/>
+        android:layout_below="@+id/status_bar"
+        android:background="@drawable/light_gray_bkgrd"/>
 
 </RelativeLayout>
