US8571 : TA17765 - Dynamic zoom for atm pins. Added code that will adjust the zoom of the camera on the ATM locator to encompass the pins on the map. It will auto zoom to view pins out to 25 miles from the searched/current location. It is only activated when a load done and the map is shown again, or when a new location is searched. Enabled state saving of the map on rotation change, so that the map does not re-animate a zoom, go to the users location, and so bubbles will stay open on rotation.

--- a/Discover-Bank-Phone/res/values/dimens.xml
+++ b/Discover-Bank-Phone/res/values/dimens.xml
@@ -8,8 +8,7 @@
     <dimen name="small_margin">5dp</dimen>
     <dimen name="large_margin">30dp</dimen>
     
-   
-   
+   <dimen name="atm_zoom_padding">80dp</dimen>
     
     <!--  Login Bottom Buttons -->
     <dimen name="login_bottom_button_height">50dp</dimen>
