--- a/Discover-Commons/res/values/env_analytics.xml
+++ b/Discover-Commons/res/values/env_analytics.xml
@@ -1,2 +1,4 @@
 <resources xmlns:tools="https://schemas.android.com/tools" tools:ignore="TypographyDashes">
+     <string name="card_tracking_rsid">discovercardmobiledev</string>
+     <string name="bank_tracking_rsid">discoverbankmobiledev</string>
 </resources>
