ID: DE5506 - Error found in TC7045: Google Terms of Use Leaving This App Modal ID: DE5513 - Help icon - tapping it in Review Payments causes crash ID: DE5360 - (Copy of) Payment Details - Error Handling - getting modal errors when they should be inline errors ID: DE5440 - Account Activity - tapping help icon causes CRASH
Tested:
- Verified the right Application Leaving modal is displayed for when clicking terms of use in Google Map ATM
- Verified the right Application Leaving modal is displayed for when tapping on any of the links in navigation menu
- Verified amount field is highlighted in red when receiving an inline error from server for the amount.
- Verified amount field remains red on rotation, if there is an error
- Verified amount field returns to grey when clicking on schedule payment
- Verified application does not crash when tapping on help icon from account activity or review payments

--- a/Discover-Bank-Phone/res/values/strings_atm_locator.xml
+++ b/Discover-Bank-Phone/res/values/strings_atm_locator.xml
@@ -54,4 +54,8 @@
     <string name="atm_location_timeout_title">Cannot Retrieve Current Location</string>
     <string name="atm_location_timeout_text">We\'re sorry, we are unable to find your location at this time. Please allow us to search for your location again.</string>
     
+    <!-- Leaving Application Modal Text  -->
+    <string name="atm_browser_title">You\'re Leaving This Application</string>
+    <string name="atm_browser_body">Tap Continue to view this page in your mobile browser.</string>
+  
 </resources>
