--- a/Discover-Launch/assets/www/card/css/discoverCardR4.css
+++ b/Discover-Launch/assets/www/card/css/discoverCardR4.css
@@ -2622,7 +2622,7 @@ padding-top: 12px;}*/
 #manageAlerts-pg .gridwidth{ width:100% !important;}
 #manageAlerts-pg #custom-carrier{ margin-bottom:0px; border:1px solid #bbb;}
 #manageAlerts-pg #changenumber .ui-block-b{ margin-top:0px;}
-#changenumber .ui-block-b input.input_hightlight_error{ border:2px solid #fd0202 !important;}
+#changenumber .ui-block-b input.input_hightlight_error,#txt-phone-number .ui-block-a input.input_hightlight_error{ border:2px solid #fd0202 !important;}
 #manageAlerts-pg #activitySelection .ui-btn-down-d  {border:1px solid #bbb !important} 
 #manageAlerts-pg.pn-page #addnumber input[type="tel"] { margin-top:7px !important; border:1px solid #bbb;}
 
