DE5529 - Android_On transfer money page, when selecting the date, DE5524 - Deposit Check - Tablet - Crash on depositing a check. DE5516 - Edit field shown for Unmanaged Payees (Android) (QC# 96817)
Tested
- Verified that the transfer calendar for send on date and frequency show the right title
- Verified the right uuid is read from the device during submit check deposit to avoid crash on tablet without phone modem
- Verified if memo is not provided from the server it is not displayed for an unmanaged payee in the detail view

--- a/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_transfers.xml
@@ -13,6 +13,7 @@
     <string name="open_an_account">Open an Account</string>
     <string name="frequency_title">Frequency</string>
     <string name="view_account_summary">View Account Summary</string>
+    <string name="select_transfer_date">Select a Transfer Date</string>
     
     <string-array name="transfer_frequency_strings">
         <item>One Time</item>
@@ -65,4 +66,5 @@
 	<string name="amount_less_than_twenty_five">Too low (less than $25).</string>
 	<string name="invalid_date">Please select a date.</string>
 	<string name="too_few_transfers">Enter the number of total transfers, must be greater than 1.</string>
+	
 </resources>
