--- a/Discover-Commons/res/values/env_net.xml
+++ b/Discover-Commons/res/values/env_net.xml
@@ -3,5 +3,5 @@
     <string name="bank_base_url">https://beta.discoverbank.com</string>
     <string name="xClientPlatform">Android</string>
     <string name="xApplicationVersion">5.0.0</string>
-    <string name="upgrade_package_id">com.discoverfinancial.mobile.DiscoverMobileActivity</string>
+    <string name="upgrade_package_id">com.discoverfinancial.mobile</string>
 </resources>
