--- a/Discover-Commons/res/layout/common_help_list_item.xml
+++ b/Discover-Commons/res/layout/common_help_list_item.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
-
     <TextView
         android:id="@+id/text"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/between_related_elements_padding"
-        android:text="temp"
-        android:textColor="@color/white"
         android:paddingLeft="@dimen/between_related_elements_padding"
+        android:paddingTop="@dimen/between_related_elements_padding"
+        android:paddingBottom="@dimen/between_related_elements_padding"
+        android:textColor="@color/white"
+        android:drawableRight="@drawable/detail_disclosure_white_arrow"
         android:textSize="@dimen/small_copy_min" />
-
 </LinearLayout>
